--- a/assets/css/templatemo-lava.css
+++ b/assets/css/templatemo-lava.css
@@ -40,6 +40,7 @@ figure, header, nav, section, article, aside, footer, figcaption {
   padding: 0;
   border: 0;
   outline: 0;
+  text-transform: capitalize;
 }
 
 .clearfix:after {
@@ -218,8 +219,8 @@ button.main-button:hover {
 }
 
 .center-heading h2 em {
-  font-style: normal;
-  color: #f4813f;
+  font-style: normal; 
+  color: #17457a;
 }
 
 .center-heading p {
@@ -278,16 +279,22 @@ header
 
 .header-area .main-nav .logo {
   line-height: 80px;
-  color: #191a20;
+  color: #17457a;
   font-size: 28px;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 0px;
   float: left;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
+  height: 80px;
+
+}
+.header-area .main-nav .logo img{
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -683,16 +690,16 @@ welcome
 
 .welcome-area .header-text h1 {
   font-weight: 900;
-  font-size: 46px;
+  font-size: 40px;
   line-height: 80px;
-  letter-spacing: 1px;
+  letter-spacing: 0px;
   margin-bottom: 30px;
   color: #191a20;
 }
 
 .welcome-area .header-text h1 em {
   font-style: normal;
-  color: #fba70b;
+  color: #17457a;
 }
 
 .welcome-area .header-text p {
@@ -1064,15 +1071,15 @@ footer .right-content {
 .footer-content .right-content h2 {
   margin-top: 0px;
   margin-bottom: 30px;
-  font-size: 42px;
+  font-size: 36px;
   text-transform: capitalize;
   font-weight: 700;
   letter-spacing: 1px;
 }
 
 .footer-content .right-content h2 em {
-  font-style: normal;
-  color: #fba70b;
+  font-style: normal; 
+  color: #17457a;
 }
 
 .footer-content .right-content p {
@@ -1170,7 +1177,7 @@ preloader
 */
 #preloader {
   overflow: hidden;
-  background-image: linear-gradient(145deg, #f4813f 0%, #f1556a 100%);
+  background-image: linear-gradient(145deg, #3d5c80  0%, #17457a 100%);
   left: 0;
   right: 0;
   top: 0;
